css/style.less
@import url("/lib/responsive-menu/css/menu.less");

@import url("/lib/page-reveal-theme/css/style.css");

@import url("/lib/responsive-fader/css/style.css");

/* Variables */
@shoutout_color: #24cddc;

body {
    margin: 0;
    padding: 0;
    font-family: 'Lato', sans-serif;
}

h1,h2,h3,h4,h5 {
    -webkit-text-stroke: 0.3px;
}

ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
}

.spacer {
    height: 3px;
    width: 50px;
    display: inline-block;
    background-color: #fff;
}

/*Bootstrap Override */
.btn {
    padding: 0 25px;
    background-color: transparent;
    font-weight: 400;
    font-size: 12px;
    letter-spacing: 2px;
    line-height: 45px;
    color: #fff;
    text-transform: uppercase;
    border-radius: 0;
    border: 2px solid #fff;
}

.btn:hover {
    background-color: #fff;
    color: #000;
}

.btn:focus {
    outline: none;
    background-color: transparent;
    color: #fff;
}

.btn-inverted {
	color: #A0A392;
	border: 2px solid #A0A392;
}

.btn-inverted:hover {
    background-color: #A0A392;
    color: #fff;
}

.btn-inverted:focus {
	outline: none;
	background-color: transparent;
    color: #A0A392;
}

.btn-sm {
	line-height: 30px;
}
/*End Override */

.page-head p {
	padding: 8px 0 0 6px;
}

/*======================================================================= */
/*----------------------------------------------------------------------- */
/* Responsive Menu Override */
/*----------------------------------------------------------------------- */
/*======================================================================= */

/* Non-Responsive colors */
@nav-height: 70px;

@navbg: #222222;

@theme-background-color: #000000; /* default theme color of menu red/green/etc */
@font-color: #B0B0B0;			  /* font color of non-responsive view */
@hover-font-color: #fff; 		  /* hover font color of non-responsive view */

/* Responsive colors */
@theme-hover-color: #191919; 	  /* hover theme color */
@res-font-color: #B0B0B0;			  /* font color when you hover in responsive mode */
@res-list-border-top: #464646;	  /* color of border separating each link in responsive mode */
@list-item-height: 50px;

@res-btn-padding: 25px 20px;

nav {
    z-index: 3;
    opacity: 0.9;
}


/*======================================================================= */
/*----------------------------------------------------------------------- */
/* Home Page */
/*----------------------------------------------------------------------- */
/*======================================================================= */

/*======================================================================= */
/* Fader Overrides */
/*======================================================================= */


section#banner-fader ul.slides li {
    opacity: 0.7;
    padding: 0;
    width: 100%;
    text-align: center;
}

section#banner-fader ul.slides li > .vcenter {
    width: 100%;
}

section#banner-fader ul.slides li .inner {
    padding: 20px;
}

section#banner-fader ul.slides li.slide-3 .inner {
    background-color: #81abaa;
}

section#banner-fader ul.slides li.slide-2 .inner {
    background-color: #16191e;
}

section#banner-fader ul.slides li.slide-1 .inner {
    background-color: #473936;
}

section#banner-fader ul.background-images li.slide-1-bg {
    background-image: url(../img/bg1.jpg);
}

section#banner-fader ul.background-images li.slide-2-bg {
    background-image: url(../img/bg2.jpg);
}

section#banner-fader ul.background-images li.slide-3-bg {
    background-image: url(../img/bg3.jpg);
}

section#banner-fader ul.slides li span.spacer {
    margin-bottom: 15px;
}

section#banner-fader ul.slides li h3 {
    font-weight: 700;
    letter-spacing: 6px;
    margin-bottom: 15px;
}

section#banner-fader ul.slides li h1 {
    font-size: 74px;
    font-weight: 900;
    letter-spacing: 4px;
}

section#banner-fader ul.slides li p {
    font-size: 16px;
    letter-spacing: 2px;
    margin: 0 250px 0 250px;
}

/*======================================================================= */
/* Home Page Sections */
/*======================================================================= */
/*------------------------- Process -------------------------*/
section.process {
    height: 400px;
    background-color: #7ac143;
    color: #fff;
    padding: 0 10px 50px 10px;
    img {
        display: block;
        margin: 25px auto 30px auto;
    }
    h1, h2, p {
        font-family: "Lato", sans-serif; 
        color: white;
        text-align: center; 
    }
}
section.process h1 {
    font-size: 20px;
    line-height: 25px;
    font-weight: 400;
}
section.process h2 {
    font-size: 25px;
    line-height: 30px;
    font-weight: 700;
}
section.process p {
    font-size: 16px;
    line-height: 19px;
    font-weight: 300;
}

/*------------------------- Slider -------------------------*/
section.slider {
    background-image: none;
    background-color: #fff;
    min-height: 400px;
    height: auto;
}

/* Temporary Slider */
section.slider .row {
    margin-top: 80px;
}

section.slider img {
    width: 100%;
    margin-bottom: 50px;
}

/*------------------------- About -------------------------*/
section.about {
    background-image: url(../img/wood.jpg);
    min-height: 400px;
    height: auto;
    padding: 65px 0;
    h1, p{
        font-family: "Lato", sans-serif;  
        color: white;
        text-align: left; 
        margin-bottom: 20px;
    }
}
section.about h1 {
    font-size: 45px;
    line-height: 50px;
    font-weight: 400;
}
section.about p {
    font-size: 18px;
    line-height: 1.6em;
    font-weight: 300;
    letter-spacing: 1px;
}

/*------------------------- Testimonials -------------------------*/
section.testimonials {
    background-image: none;
    background-color: #fff;
    min-height: 400px;
    height: auto;
    padding: 100px 0;
    h1, h2, blockquote {
        font-family: "Lato", sans-serif;
        color: #56584B;
        text-align: left;
    }
    img {
        display: block;
        margin: 0 auto 25px auto;
    }
}
section.testimonials h1 {
    font-size: 26px;
    line-height: 29px;
    font-weight: 700;
    padding: 0;
    margin: 0;
}
section.testimonials h2 {
    font-size: 20px;
    line-height: 29px;
    font-weight: 400;
}
section.testimonials blockquote {
    font-size: 45px;
    line-height: 22px;
    font-weight: 300;
    font-style: italic;
    color: black;
    letter-spacing: 1px;
    margin: 0.25em 0;
    padding: 0.35em 40px;
    line-height: 1.45;
    position: relative;
}
section.testimonials blockquote:before {
    display: block;
    padding-left: 25px;
    content: "\201C";
    font-size: 100px;
    position: absolute;
    left: -20px;
    top: -20px;
    color: #7a7a7a;
}
section.testimonials #testimonial-slides li {
    position: absolute;
    list-style-type: none;
    height: 100%;
    width: 100%;
    display: none;
}
section.testimonials #testimonial-slides li:last-child {
    display: block;
}

// @media (max-width: 480px) {
//     section.testimonials blockquote {
//         font-size: 30px !important;
//     }
//     section.testimonials #testimonial-slides {
//         min-height: 0;
//     }
// }


/*------------------------- Shoutout -------------------------*/
section.shoutout {
    background-color: @shoutout_color;
    min-height: 400px;
    height: auto;
    color: #fff;
    text-align: center;
    .container {
        padding: 100px 0;
    }
}
section.shoutout .container h1 {
    font-family: "Lato", sans-serif;
    font-size: 45px;
    line-height: 50px;
    font-weight: 400;
    color: white;
    text-align: center;
    margin-bottom: 70px;
}

/*------------------------- Footer -------------------------*/
footer.layout-footer {
    background-color: #222222;
    min-height: 60px;
    height: auto;
    color: #B0B0B0;
}
footer.layout-footer {
    p {
        font-size: 16px;
        line-height: 20px;
        padding-top: 20px;
    }
    i {
        padding-top: 25px;
        margin-right: 15px;
        &:hover{
            color:#fff;
            cursor: pointer;
        }
    }
    div.right {
        text-align: right;
    }
}

/*------------------------- Mobile -------------------------*/
@media (max-width: 480px) and (max-height:320px) {
    section#banner-fader ul.slides li h1 {
        h1, h3, button {
            display: none;
        }
    }
    section#banner-fader ul.slides li .inner {
        padding: 0 !important;
    }
}

@media (max-width: 480px) and (max-height:700px) {
    section#banner-fader ul.slides li p {
        display: none;
    }

    section#banner-fader ul.slides li .inner {
        padding: 10px;
    }
}

@media (max-width: 767px) {

    section.testimonials blockquote {
        font-size: 30px;
    }

    .divider {
        background-size: auto auto;
        background-attachment: scroll;
    }

    section.process {
        height: auto;
        min-height: 400px;
    }

    section.process p {
        margin: 10px 10% 0 10%;
    }

    section.process .card {
        padding-bottom: 25px;
        border-bottom: 1px solid #96CD69;
    }

    section.process .card:last-child {
        border: none;
    }

    footer.layout-footer div.right {
        text-align: left;
        line-height: 20px;
        margin-top: -25px;
        margin-bottom: 15px;
    }

    footer.layout-footer i {
        margin-top: 0;
    }

    section#banner-fader ul.slides li span.spacer {
        padding: 0;
        margin: 0;
    }

    section#banner-fader ul.slides li h3 {
        font-size: 16px;
        margin: 0;
        margin-bottom: 5px;
    }

    section#banner-fader ul.slides li h1 {
        font-size: 44px;
        padding: 0;
        margin: 0;
    }

    section#banner-fader ul.slides li .inner {
        padding: 20px;
    }

    section#banner-fader ul.slides li p {
        margin: 0 10px;
    }

  
    section.testimonials h1, section.testimonials h2, section.testimonials blockquote {
        text-align: center;
    }

    section.testimonials p {
        margin: 10px 5% 0 5%;
    }

    section.testimonials #testimonial-slides {
        min-height: 400px;
    }
}

@media (min-width: 768px ) and (max-width: 992px) {

    section.process h2{
        font-size:  18px; 
        margin-top: 2px;
        margin-bottom: 2px;
    }

    section#banner-fader ul.slides li p {
        margin: 0 50px 0 50px;
        padding: 0;
    }

    section.testimonials blockquote {
        font-size: 40px;
    }
}

/*======================================================================= */
/* Other Pages */
/*======================================================================= */
/*------------------------- General Page Settings -------------------------*/
section.page-head {
    font-family: "Lato", sans-serif;
    min-height: 250px;
    background-image: url(../img/wood_2.jpg);
    color: white;
}
section.page-head h1 {
    padding-top: 95px;
    font-size: 65px;
    line-height: 45px;
    font-weight: 300;
    margin-bottom: 5px;
}
section.page-head p {
    font-size: 20px;
    line-height: 27px;
    font-weight: 300;
}
section.page-head.page, section.content.page {
    height: auto;
}
section.content {
    text-align: center;
    font-family: "Lato", sans-serif;
    color: #555555;
}
section.content h1 {
    font-size: 40px;
    line-height: 40px;
    font-weight: 300;
}
section.content p {
    font-size: 20px;
    line-height: 1.6em;
    font-weight: 300;
    margin-bottom: 10px;
}
section.content .spacer {
    background-color: black;
    margin: 30px 0 12px 0;
}
section.content .container {
    margin: 75px auto;
}
@media (max-width: 480px) {
    section.page-head.page h1 {
        padding-top: 80px;
        font-size: 45px;
    }
}

